# ladr

./: .gitignore  CMakeLists.txt  README.md  README.win  VERSION_DATE.h  test_cpp.cpp
.github/workflows/: release.yml  test.yml
TODO/: Prompts.md  include_graph.py  include_graph.xml  requirements.txt
apps.src/: clausefilter.c  clausetester.c  complex.c  directproof.c  gen_trc_defs.c  idfilter.c  interpfilter.c  interpformat.c  isofilter.c  isofilter0.c  isofilter2.c  latfilter.c  mirror-flip.c  olfilter.c  perm3.c  prooftrans.c  renamer.c  rewriter.c  rewriter2.c  sigtest.c  test_clause_eval.c  upper-covers.c
apps.src/old/: cdprover.c  deny.c  latgen.c  modelformat.c  undeny.c
bob/: ioutil.c  ioutil.h  just.c  prooftrans.c
ladr/: CMakeLists.txt  ac_redun.c  ac_redun.h  attrib.c  attrib.h  avltree.c  avltree.h  backdemod.c  backdemod.h  banner.c  banner.h  basic.c  basic.h  btm.c  btm.h  btu.c  btu.h  clash.c  clash.h  clause_eval.c  clause_eval.h  clause_misc.c  clause_misc.h  clauseid.c  clauseid.h  clauses.c  clauses.h  clist.c  clist.h  clock.c  clock.h  cnf.c  cnf.h  complex.c  definitions.c  definitions.h  demod.c  demod.h  di_tree.c  di_tree.h  (+92 more)
ladr/save/: attrib.c  btm.c  btu.c  clash.c  clause.c  clist.c  commands.c  commands.h  commands2.c  detach.c  discrim.c  features.c  formula.c  fpa.c  fpalist.c  glist.c  hash.c  interp.c  just.c  lindex.c  mindex.c  options.c  parse.c  pindex.c  read_tptp_file.c  strbuf.c  term.c  unify.c
mace4.src/: arithmetic.c  arithmetic.h  commandline.c  estack.c  estack.h  ground.c  ground.h  mace4.c  msearch.c  msearch.h  mstate.c  mstate.h  negpropindex.c  ordercells.c  print.c  propagate.c  propagate.h  syms.c  syms.h  util.c
provers.src/: CMakeLists.txt  Makefile  actions.c  demodulate.c  demodulate.h  giv_select.c  giv_select.h  index_lits.c  index_lits.h  iterate4.c  ladr_to_tptp.c  mprover.c  pred_elim.c  pred_elim.h  provers.c  provers.h  search-structures.h  search.c  semantics.c  tptp_to_ladr.c  unfold.c  unfold.h  utilities.c  utilities.h  white_black.c  white_black.h
provers.src/save/: control_sos.c  control_sos.h  definitions.c  definitions.h  lits_index.c  picker.c  picker.h  prover9.h
python_bindings/: BUILD_AND_TEST.md  CMakeLists.txt  Readme.md  build_and_test.sh  example.py  final_test.py  pyproject.toml  run_two_tests.py  setup.py  test_formula.py  test_header.py  test_import.py  test_lists.py  test_modified.py  test_with_cleanup.py
python_bindings/ladr/: __init__.py  error_wrapper.py  memory_wrapper.py  parse_wrapper.py  term_wrapper.py  top_input.py
python_bindings/ladr_bindings/: errors.py  fatal_bindings.cpp  formula_bindings.cpp  formula_bindings.h  formula_wrapper.c  formula_wrapper.h  glist_bindings.cpp  glist_bindings.h  glist_wrapper.c  glist_wrapper.h  header_bindings.cpp  order_bindings.cpp  parse_bindings.cpp  parse_wrapper.py  term_bindings.cpp  top_input_bindings.cpp  top_input_bindings.h  top_input_wrapper.c  top_input_wrapper.h
python_bindings/ladr_header/: CMakeLists.txt  header_bindings.cpp
python_bindings/ladr_string/: order.c  order_bindings.cpp  string_bindings.cpp
python_bindings/mace4/: mace4.py
python_bindings/mace4_bindings/: msearch_bindings.cpp  msearch_wrapper.c  msearch_wrapper.h
python_bindings/src/: ladr_bindings.cpp
python_bindings/src/common/: error_handling.hpp
python_bindings/src/ladr/: error_handler.cpp  error_handler_wrapper.cpp  fatal.cpp  fatal.h  fatal_wrapper.c  formula.cpp  formula.hpp  glist.cpp  glist.hpp  glist_wrapper.cpp  ladr_combined.cpp  memory.cpp  memory_wrapper.cpp  options.cpp  order.cpp  parse.cpp  parse_wrapper.cpp  strbuf.hpp  symbols.cpp  term.cpp  term.hpp  term_wrapper.cpp
python_bindings/src/ladr/common/: conversions.hpp
python_bindings/tests/: __init__.py  test_api_examples.py  test_error_handling.py  test_fatal.py  test_formula.py  test_header.py  test_mace4.py  test_order.py  test_parse.py  test_symbol_table.py  test_symbols.py  test_sympy_term.py  test_syntax.py  test_term.py  test_top_input.py
scripts/: msvc-ninja-build.bat
test.src/: avltest.c  tptp_test.c
