[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0",
    "cmake>=3.18",
]
build-backend = "scikit_build_core.build"

[project]
name = "ladr"
version = "0.1.0"
description = "Python bindings for LADR module"
requires-python = ">=3.7"

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.packages = ["order", "header", "fatal"]
